--- a/EnterPriseIn/EnterPriseIn/en.lproj/Localizable.strings
+++ b/EnterPriseIn/EnterPriseIn/en.lproj/Localizable.strings
@@ -12,4 +12,4 @@
 "TabBarHomeNews" = "News";
 "TabBarHomeEnter" = "Enter";
 "TabBarHomePerson" = "Mine";
-
+"HomePageTableHeader" = "CooperativeBusiness";
