--- a/EnterPriseIn/EnterPriseIn/en.lproj/Localizable.strings
+++ b/EnterPriseIn/EnterPriseIn/en.lproj/Localizable.strings
@@ -13,3 +13,9 @@
 "TabBarHomeEnter" = "Enter";
 "TabBarHomePerson" = "Mine";
 "HomePageTableHeader" = "CooperativeBusiness";
+
+"ShareApp" = "Share App";
+"WechatFriends" = "WechatFriends";
+"WechatSpace" = "Wechat Space";
+"QQFriends" = "QQFriends";
+"WhatsApp" = "WhatsApp";
