--- a/EnterPriseIn/EnterPriseIn/zh-Hans.lproj/Localizable.strings
+++ b/EnterPriseIn/EnterPriseIn/zh-Hans.lproj/Localizable.strings
@@ -16,7 +16,7 @@
 "HomePageTableHeader" = "合作商家";
 "ShareApp" = "分享汽摩配之窗";
 
-"WechatFriends" = "微信好友";"WechatFriends";
-"WechatSpace" = "微信朋友圈";"Wechat Space";
-"QQFriends" = "QQ好友";"QQFriends";
-"WhatsApp" = "WhatsApp";"WhatsApp";
+"WechatFriends" = "微信好友";
+"WechatSpace" = "微信朋友圈";
+"QQFriends" = "QQ好友";
+"WhatsApp" = "WhatsApp";
